--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.0-alpha7</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-nop</artifactId>-->
+<!--            <version>2.0.0-alpha7</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <properties>
